--- a/src/main/resources/templates/block/adminModal.html
+++ b/src/main/resources/templates/block/adminModal.html
@@ -1,12 +1,8 @@
-<div xmlns:th="http://www.thymeleaf.org">
+    <div xmlns:th="http://www.thymeleaf.org">
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
                 <div class="modal-body">
                     <div class="container">
                         <div class="row justify-content-md-center">
@@ -24,22 +20,22 @@
                                     <thead>
                                         <tr>
                                             <th scope="col">#</th>
-                                            <th scope="col">Nombre</th>
-                                            <th scope="col">Detalle</th>
+                                            <th scope="col">Fecha</th>
+                                            <th scope="col">Usuario</th>
+                                            <th scope="col">Correlativo</th>
                                             <th scope="col">Precio</th>
-                                            <th scope="col">Material</th>
-                                            <th scope="col">Tipo Producto</th>
+                                            <th scope="col">Estado</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <th:block th:each="producto, row:${productos}">
+                                        <th:block th:each="listaOrdenCompra, row:${listaOrdenCompra}">
                                             <tr>
-                                                <th th:text="${producto.id_producto}" />
-                                                <th th:text="${producto.nombre}" />
-                                                <th th:text="${producto.detalles}" />
-                                                <th th:text="${producto.precio}" />
-                                                <th th:text="${producto.material.nombre_material}" />
-                                                <th th:text="${producto.tipo_producto.nombre_tipo}" />
+                                                <th th:text="${listaOrdenCompra.id_orden_compra}" />
+                                                <th th:text="${listaOrdenCompra.fecha}" />
+                                                <th th:text="${listaOrdenCompra.userlog}" />
+                                                <th th:text="${listaOrdenCompra.correlativo}" />
+                                                <th th:text="${listaOrdenCompra.total_money}" />
+                                                <th th:text="${listaOrdenCompra.status}" />
                                             </tr>
                                         </th:block>
                                     </tbody>
@@ -48,9 +44,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer justify-content-md-center">
+                    <label>Total de dinero: <p th:text="${totalDin}"></p></label>
+                    
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
