--- a/src/main/resources/templates/AdminRegistro.html
+++ b/src/main/resources/templates/AdminRegistro.html
@@ -76,6 +76,18 @@
                     </div>
                 </div>
             </div>
+             <div class="col-sm">
+                <div class="card mb-3 text-center">
+                    <div class="fotoProducto">
+                    <p>PARA AGREGAR IMAGENES</p>
+                        <button type="image" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal5">
+                            <a href="/adminAgregarImagen">
+                                <img src="img/tp.png" class="card-img-top" alt="...">
+                            </a>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!------------------------------------------------------------------------------------------------------------------------------>
