--- a/src/main/resources/templates/tracking.html
+++ b/src/main/resources/templates/tracking.html
@@ -53,11 +53,12 @@
 			<th:block th:each="producto, row:${ordenes}">
 				<div class="col col-lg-10 col-md-5 col-sm-12 mt-5">
 				<div class="card col ">
-					<h5 class="card-header">ID correlativo: <th th:text="${producto.correlativo}" /></h5>
+					<h5 class="card-header">ID correlativo: <p  th:text="${producto.correlativo}"></p></h5>
+					<input id="demo2" type="hidden" th:value="${producto.correlativo}">
 					<div class="card-body">
 						<h5 class="card-title"> Monto : $ <th th:text="${producto.total_money}" /></h5>
 						<p class="card-text">Fecha de orden: <th th:text="${producto.fecha}" /> </p>
-						<a  class="bluebutton buttonown"  th:onclick="'track()'">Detalles</a>
+						<a  class="bluebutton buttonown"  th:onclick="'track('+${producto.id_orden_compra}+')'">Detalles</a>
 					</div>
 				</div>
 			</div>
