--- a/src/main/resources/templates/respuesta2.html
+++ b/src/main/resources/templates/respuesta2.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ingresar Producto</title>
+<!--Boostrap  -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+<!--Boostrap Script  -->
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+	crossorigin="anonymous"></script>
+<!--animate css  -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+<!--Own Styles  -->
+<link rel="stylesheet" href="css/cstyle.css">
+<link rel="stylesheet" href="css/estilo.css">
+<!--Font Awesome-->
+<script src="https://kit.fontawesome.com/f2dde07271.js"
+	crossorigin="anonymous"></script>
+<!--ALLfont.es-->
+<link href="https://allfont.es/allfont.css?fonts=montserrat-light"
+	rel="stylesheet" type="text/css" />
+<link href="https://allfont.es/allfont.css?fonts=playfair-display"
+	rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    
-    <h1>Ingrese un usuario</h1>
-    
-    <form th:action="@{/ingresar}" method="POST" enctype="multipart/form-data">
-		<label>Nombre</label><input id="nombre" name="nombre">
-		
-		<label>Apellido</label><input id="apellido"  name="apellido"><br>
-		<label>Imagen a subir</label>
-		<input type="file" name="file" /><br><br>
-		
-		<input type="submit" value="Ingresar">
-	</form>
-	
-	<form th:action="@{/index}" method="post">
-		<input type="submit" value="Regresar al index">
-	</form>
-      
+	<th:block th:include="/block/header"></th:block>
+	<div class="container rob">
+		<h3>Seleccione el producto al cual le agregara fotografia</h3>
+
+		<form th:action="@{/adminIngresarImagen}" th:object="${producto}"method="POST" enctype="multipart/form-data">
+			<select  id="tipomaterial" name="eleccion" class="form-select"
+				aria-label="Default select example">
+				<option  th:each="prod: ${prod}" th:text="${prod.nombre}" th:field="${producto.id_producto}" th:value="${prod.id_producto}"></option>
+			
+			</select> <label>Imagen a subir</label> <input type="file" name="file" /> <br>
+			<br> <input type="submit" value="Ingresar">
+		</form>
+
+		<form th:action="@{/index}" method="post">
+			<input type="submit" value="Regresar al index">
+		</form>
+	</div>
+	<th:block th:include="/block/footer"></th:block>
+
+
+
 </body>
+
 </html>
