--- a/src/main/resources/templates/tracking2.html
+++ b/src/main/resources/templates/tracking2.html
@@ -55,8 +55,8 @@
 				<div class="card col ">
 					<h5 class="card-header">ID correlativo: <th th:text="${producto.correlativo}" /></h5>
 					<div class="card-body">
-						<h5 class="card-title"> Monto : $ <th th:text="${producto.total_money}" /></h5>
-						<p class="card-text">Fecha de orden: <th th:text="${producto.fecha}" /> </p>
+						<h5 class="card-title"> Monto : $ <th th:text="${producto.valor_money}" /></h5>
+						<p class="card-text">Fecha de orden: <th th:text="${producto.material}" /> </p>
 						<a  class="bluebutton buttonown"  th:onclick="'track()'">Detalles</a>
 					</div>
 				</div>
